<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">AoE 2 Database</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="warning">Warning</string>
    <string name="action_sort">Sort</string>
    <string name="about_text">Age of Empires 2 Database %s\n\nApplication made by Pau795.\nContact: pau795@gmail.com\n\nApplication data has been extracted from AoE 2 Definitive Edition (update %d), making use of the Advanced Genie Editor. Extra information was obtained from AoE wiki, AoKHeaven, and doing my own research.\n\nThanks to Edutosu and Maicol for inspiring me to do this App, thanks to Peluca for helping me testing the App, and thanks to LBeleven for helping me with some research.\n\nFeel free to contact me if you want to give your feedback, it would be much appreciated.\n\nAge of Empires II: Definitive Edition \u00A9 Microsoft Corporation.\nAoE2 Database was created under Microsoft\'s Game Content Usage Rules using assets from Age of Empires II: Definitive Edition, and it is not endorsed by or affiliated with Microsoft.</string>
    <string name="support_text">Thank you for downloading AoE 2 Database.\n\nIf you like and enjoy the app, and you want to help the development, you can consider to support me through link below.\n\nThis message will be shown only one time, but the link is always available at the top right corner.</string>
    <string name="buy_me_a_coffee" translatable="false">Buy me a Coffee</string>
    <string name="buy_me_a_coffee_url" translatable="false">https://www.buymeacoffee.com/pau795</string>
    <string name="web_app_url" translatable="false">https://www.aoe2database.com</string>
    <string name="performance_strong">Strong against</string>
    <string name="performance_weak">Weak against</string>
    <string name="unit_attack_values">Unit Attack Values</string>
    <string name="building_attack_values">Building Attack Values</string>
    <string name="projectile_attack_values">Projectile Attack Values</string>
    <string name="unit_armor_values">Unit Armor Values</string>
    <string name="building_armor_values">Building Armor Values</string>
    <string name="none">None</string>
    <string name="test">Test</string>
    <string name="loading_app_data">Loading App Data</string>
    <string name="search_hint">Search…</string>
    <string name="civ_available">Available</string>
    <string name="civ_unavailable">Unavailable</string>
    <string name="title_activity_unit">Units</string>
    <string name="title_activity_building">Buildings</string>
    <string name="title_activity_technology">Technologies</string>
    <string name="title_activity_civilization">Civilizations</string>
    <string name="title_activity_tech_tree">Tech Tree</string>
    <string name="title_activity_quiz">New Quiz</string>
    <string name="title_activity_score">Scores</string>
    <string name="title_activity_game_mechanics">Game Mechanics</string>
    <string name="title_tech_tree_quiz">Tech Tree</string>
    <string name="title_civilization_quiz">Civilizations</string>
    <string name="title_unit_building_stats_quiz">Unit &amp; Building Stats</string>
    <string name="title_unit_recognition_quiz">Unit Recognition</string>
    <string name="title_technology_stats_quiz">Technology Stats</string>
    <string name="title_unique_techs_quiz">Unique Technologies</string>
    <string name="title_loading">Loading</string>
    <string name="title_action_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_support">Support</string>
    <string name="title_gathering_rates">Gathering Rates</string>
    <string name="title_damage_formula">Damage Formula</string>
    <string name="title_building_mechanics">Building Mechanics</string>
    <string name="title_repairing_mechanics">Repairing Mechanics</string>
    <string name="title_farm_mechanics">Farm Mechanics</string>
    <string name="title_trade_mechanics">Trade Mechanics</string>
    <string name="title_stats_definition">Stats Definition</string>
    <string name="title_conversion_mechanics">Conversion Mechanics</string>
    <string name="title_accuracy_mechanics">Accuracy Mechanics</string>
    <string name="title_garrison_mechanics">Garrison Mechanics</string>
    <string name="title_tools">Tools</string>
    <string name="title_cheat_codes">Cheat Codes</string>
    <string name="title_taunts">Taunts</string>
    <string name="title_history">History</string>
    <string name="title_economy_calculator">Economy Calculator</string>
    <string name="title_miscellaneous">Miscellaneous</string>
    <string name="title_unit_comparator">Unit Comparator</string>
    <string name="title_test_activity">Test Activity</string>
    <string name="title_damage_calculator_activity">Damage Calculator</string>
    <string name="title_advanced_search_activity">Advanced Search\n(Under Construction)</string>
    <string name="gm_economy">Economy</string>
    <string name="gm_military">Military</string>
    <string name="gm_basics">Basics</string>
    <string name="gm_show_table">Show Table</string>
    <string name="gm_hide_table">Hide Table</string>
    <string name="gm_farm_harvesting">Harvesting</string>
    <string name="gm_farm_gathering_rates">Gathering Rates</string>
    <string name="gm_farm">Farm</string>
    <string name="gm_food_provided">Food</string>
    <string name="gm_food_generated_per_wood">Food Generated per Wood</string>
    <string name="gm_farm_table_standard">Standard</string>
    <string name="gm_farm_table_horse_collar">Horse Collar</string>
    <string name="gm_farm_table_heavy_plow">Heavy Plow</string>
    <string name="gm_farm_table_crop_rotation">Crop Rotation</string>
    <string name="gm_farm_table_teutons_standard">Teutons Standard</string>
    <string name="gm_farm_table_teutons_horse_collar">Teutons + Horse Collar</string>
    <string name="gm_farm_table_teutons_heavy_plow">Teutons + Heavy Plow</string>
    <string name="gm_farm_table_teutons_crop_rotation">Teutons + Crop Rotation</string>
    <string name="gm_farm_table_chinese_standard">Chinese Standard</string>
    <string name="gm_farm_table_chinese_horse_collar">Chinese + Horse Collar</string>
    <string name="gm_farm_table_chinese_heavy_plow">Chinese + Heavy Plow</string>
    <string name="gm_farm_table_teutons_chinese_ally_crop_rotation">Teutons + Chinese Ally + Crop rotation</string>
    <string name="gm_farm_table_sicilians_horse_collar">Sicilians + Horse Collar</string>
    <string name="gm_farm_table_sicilians_heavy_plow">Sicilians + Heavy Plow</string>
    <string name="gm_farm_table_sicilians_crop_rotation">Sicilians + Crop Rotation</string>
    <string name="gm_farm_table_sicilians_crop_rotation_chinese_ally">Sicilians + Chinese Ally + Crop Rotation</string>
    <string name="farm_mechanics_basics">Farms are a renewable source of food. They cost 60 wood, which is converted into food that can be harvested by villagers. The amount of food obtainable from farms depends on the upgrades researched, and civilization bonuses. The following table shows a comparison of the exchange between wood and food for different civilizations and researches.</string>
    <string name="farm_mechanics_harvesting1">When a villager is tasked to harvest food from a farm, he will follow the next two rules:\n</string>
    <string name="farm_mechanics_harvesting2">Villagers can only harvest from the 2x2 tile square at the center of the farm, and there are 9 spots where villagers can harvest (as shown in the image below). This means that farms placed close to the edge of the deposit building are slightly more efficient than the ones at the diagonals.</string>
    <string name="gm_introduction">Introduction</string>
    <string name="gm_stats">Stats</string>
    <string name="stats_introduction">This document explains the meaning of the stats shown for units and buildings. For each stat that a unit or building has, its base value is shown, or a dash in case the stat is not relevant. Some stats have a second value is shown in parentheses, which is the value of the calculated stat, considering all the bonuses and technologies of the current civilization and age which is chosen.\nSimilar as in the game, some stats (like the Attack) show the calculated value as an addition to the base stat, while others (like the Hit Points) just show the final calculated value.</string>
    <string name="stats_definition1"><b>Hit Points (HP):</b> Amount of health that the unit has. When the HP is down to 0, the unit dies.\n\n<b>Attack:</b> Base attack that the unit has. It can be melee or pierce attack.\n\n<b>Melee Armor:</b> Resistance to melee attacks.\n\n<b>Pierce Armor:</b>  Resistance to pierce attacks.\n\n<b>Range:</b> Maximum distance which the unit can attack from. Measured in tiles.\n\n<b>Minimum Range:</b> Minimum distance which the unit can attack from. Measured in tiles.\n\n<b>Line of Sight (LoS):</b> Maximum distance which the unit can see. Measured in tiles.\n\n<b>Reload Time:</b> Time required to start the next attack after finishing one. Measured in seconds.\n\n<b>Speed:</b> Speed which the unit travels. Measured in tiles/second.\n\n<b>Blast Radius:</b> Distance to measure the size of the area of effect of an attack. Measured in tiles.\n\n<b>Attack Delay:</b> Time required to start attacking in the first hit. Measured in seconds.\n\n<b>Accuracy:</b> Probability of hitting the targeted unit.\n\n<b>Number of Projectiles:</b> Amount of projectiles that the unit shoots in one attack.\n\n<b>Projectile Speed:</b> Speed which the projectile travels. Measured in tiles/second.\n\n<b>Garrison Capacity:</b> Amount of units that the unit/building can handle inside.\n\n<b>Population Taken:</b> Amount of population taken by the unit when its trained.\n\n<b>Population Headroom:</b> Population provided by the building when its constructed.\n\n<b>Cost:</b> Amount of resources needed to train the unit.\n\n<b>Work Rate:</b> Rate at which the unit works. Measured in resources/second.\n\n<b>Healing Rate:</b> Rate at which the unit heals itself, or the building heals garrisoned units. Measured in HP/second.\n\n<b>Training Time:</b> Time required to train the unit. Measured in seconds.</string>
    <string name="main_data_base">Database</string>
    <string name="main_quiz_mode">Quiz Mode</string>
    <string name="main_home">Main Menu</string>
    <string name="main_units">Units</string>
    <string name="main_buildings">Buildings</string>
    <string name="main_techs">Technologies</string>
    <string name="main_civs">Civilizations</string>
    <string name="main_tech_tree">Tech Tree</string>
    <string name="main_game_mechanics">Game Mechanics</string>
    <string name="main_tools">Tools</string>
    <string name="main_misc">Miscellaneous</string>
    <string name="main_new_quiz">New Quiz</string>
    <string name="main_scores">Scores</string>
    <string name="civilization_bonuses">Civilization Bonuses</string>
    <string name="civilization_unique_units">Unique Units</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="compare_unit">Compare Unit</string>
    <string name="quiz_select_questions">Select the number of questions for the quiz:</string>
    <string name="quiz_select_kind_questions">Select which kind of questions you want in the quiz:</string>
    <string name="quiz_10_questions">10 questions</string>
    <string name="quiz_20_questions">20 questions</string>
    <string name="quiz_30_questions">30 questions</string>
    <string name="quiz_civ_theme">Civilization Theme</string>
    <string name="quiz_civ_emblem">Civilization Emblem</string>
</resources>