<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_stats"
        android:orderInCategory="50"
        android:title="@string/title_stats_definition"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_compare"
        android:orderInCategory="50"
        android:title="@string/compare_unit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/title_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_support"
        android:orderInCategory="100"
        android:title="@string/buy_me_a_coffee"
        app:showAsAction="never" />
</menu>
