<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menuid"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/title_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_icon"
        android:title="@string/search"
        android:orderInCategory="50"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/sort_icon"
        android:title="@string/sort"
        android:orderInCategory="10"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_support"
        android:orderInCategory="100"
        android:title="@string/buy_me_a_coffee"
        app:showAsAction="never" />
</menu>