<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gm_economy"
                android:textSize="20sp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/divider"/>
            <com.aoedb.widgets.MenuButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:buttonTittle="@string/title_building_mechanics"
                app:buttonIcon="@drawable/t_building"
                app:buttonIntentClass="com.aoedb.activities.BuildingMechanicsActivity"/>
            <com.aoedb.widgets.MenuButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:buttonTittle="@string/title_repairing_mechanics"
                app:buttonIcon="@drawable/t_repair"
                app:buttonIntentClass="com.aoedb.activities.RepairingMechanicsActivity"/>
            <com.aoedb.widgets.MenuButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:buttonTittle="@string/title_farm_mechanics"
                app:buttonIcon="@drawable/b_farm"
                app:buttonIntentClass="com.aoedb.activities.FarmMechanicsActivity"/>
            <com.aoedb.widgets.MenuButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:buttonTittle="@string/title_trade_mechanics"
                app:buttonIcon="@drawable/t_building"
                app:buttonIntentClass="com.aoedb.activities.TradeMechanicsActivity"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/gm_military"
                android:textSize="20sp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/divider"/>
            <com.aoedb.widgets.MenuButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:buttonTittle="@string/title_damage_formula"
                app:buttonIcon="@drawable/b_barracks"
                app:buttonIntentClass="com.aoedb.activities.DamageFormulaActivity"/>
            <com.aoedb.widgets.MenuButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:buttonTittle="@string/title_stats_definition"
                app:buttonIcon="@drawable/b_university"
                app:buttonIntentClass="com.aoedb.activities.StatsDefinitionActivity"/>
            <com.aoedb.widgets.MenuButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:buttonTittle="@string/title_garrison_mechanics"
                app:buttonIcon="@drawable/t_garrison"
                app:buttonIntentClass="com.aoedb.activities.GarrisonMechanicsActivity"/>
            <com.aoedb.widgets.MenuButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:buttonTittle="@string/title_conversion_mechanics"
                app:buttonIcon="@drawable/b_monastery"
                app:buttonIntentClass="com.aoedb.activities.ConversionMechanicsActivity"/>

    </LinearLayout>
</ScrollView>