<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.aoedb.widgets.MenuButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTittle="@string/title_gathering_rates"
            app:buttonIcon="@drawable/t_double_bit_axe"
            app:buttonIntentClass="com.aoedb.activities.GatheringRatesActivity"/>
        <com.aoedb.widgets.MenuButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTittle="@string/title_unit_comparator"
            app:buttonIcon="@drawable/b_market"
            app:buttonIntentClass="com.aoedb.activities.UnitComparatorActivity"/>
        <com.aoedb.widgets.MenuButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTittle="@string/title_economy_calculator"
            app:buttonIcon="@drawable/t_coinage"
            app:buttonIntentClass="com.aoedb.activities.EconomyCalculatorActivity"/>
        <com.aoedb.widgets.MenuButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTittle="@string/test"
            android:visibility="gone"
            app:buttonIcon="@drawable/t_imperial_age"
            app:buttonIntentClass="com.aoedb.activities.TestActivity"/>
        <com.aoedb.widgets.MenuButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTittle="@string/title_damage_calculator_activity"
            app:buttonIcon="@drawable/b_barracks"
            app:buttonIntentClass="com.aoedb.activities.DamageCalculatorActivity"/>
        <com.aoedb.widgets.MenuButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTittle="@string/title_advanced_search_activity"
            app:buttonIcon="@drawable/t_illumination"
            app:buttonIntentClass="com.aoedb.activities.AdvancedSearchActivity"/>
    </LinearLayout>
</ScrollView>