<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/quiz_select_kind_questions"
        android:textSize="20sp"
        android:padding="10dp"/>

    <LinearLayout
        android:id="@+id/bonuses_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/newcivquiz_bonuses_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:clickable="false"
            android:padding="10dp"
            android:text="@string/civilization_bonuses"
            android:textSize="16sp"
            app:buttonTint="@color/checkbox_button" />
    </LinearLayout>
        <LinearLayout
            android:id="@+id/unique_units_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/newcivquiz_uniqueunits_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:clickable="false"
                android:checked="true"
                android:text="@string/civilization_unique_units"
                app:buttonTint="@color/checkbox_button"
                android:padding="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/themes_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
             <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/newcivquiz_themes_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:checked="true"
                android:textSize="16sp"
                android:text="@string/quiz_civ_theme"
                app:buttonTint="@color/checkbox_button"
                android:padding="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/emblems_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/newcivquiz_emblems_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:checked="true"
                android:textSize="16sp"
                android:text="@string/quiz_civ_emblem"
                app:buttonTint="@color/checkbox_button"
                android:padding="10dp"/>
        </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/quiz_select_questions"
        android:textSize="20sp"
        android:padding="10dp"/>
    <RadioGroup
        android:id="@+id/newcivquiz_questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/checkbox10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:checked="true"
            android:text="@string/quiz_10_questions"
            app:buttonTint="@color/checkbox_button"
            android:padding="10dp"/>
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/checkbox20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/quiz_20_questions"
            app:buttonTint="@color/checkbox_button"
            android:padding="10dp"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/checkbox30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/quiz_30_questions"
            app:buttonTint="@color/checkbox_button"
            android:padding="10dp"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal"
        android:gravity="right">
        <Button
            android:id="@+id/newcivquiz_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/cancel"
            android:textColor="@color/checkbox_button"/>
        <Button
            android:id="@+id/newcivquiz_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/ok"
            android:textColor="@color/checkbox_button"/>
    </LinearLayout>

</LinearLayout>
