<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.aoedb.widgets.MenuButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTittle="@string/title_cheat_codes"
            app:buttonIcon="@drawable/u_cobra"
            app:buttonIntentClass="com.aoedb.activities.CheatCodesActivity"/>
        <com.aoedb.widgets.MenuButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTittle="@string/title_taunts"
            app:buttonIcon="@drawable/t_taunt"
            app:hasBorder="false"
            app:buttonIntentClass="com.aoedb.activities.TauntActivity"/>
        <com.aoedb.widgets.MenuButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTittle="@string/title_history"
            app:buttonIcon="@drawable/t_heresy"
            app:buttonIntentClass="com.aoedb.activities.HistoryListActivity"/>
    </LinearLayout>
</ScrollView>